testsuites/LLT/compiler/Diagnose/lex_test/lex_unexpected_decimal_point/case8.expect.out
error: unexpected decimal point '.' in octal base number
  ==> case8.cj:13:18:
   | 
13 |    var a = 0o1237.12p3
   |            ~~    ^ unexpected decimal point
   |            |
   |            because of this octal prefix
   | 
   # note: only decimal or hexadecimal number can support fractional part
help: if you expect a decimal fraction, could remove the prefix:
   | 
13 |    var a =  1237.12p3
   |            ~ 
   | 
help: if you expect a hexadecimal fraction, could use hexadecimal prefix:
   | 
13 |    var a = 0x1237.12p3
   |            ~~ 
   | 

error: unexpected decimal point '.' in binary base number
  ==> case8.cj:14:15:
   | 
14 |     var b = 0b.2
   |             ~~^ unexpected decimal point
   |             |
   |             because of this binary prefix
   | 
   # note: only decimal or hexadecimal number can support fractional part
help: if you expect a decimal fraction, could remove the prefix:
   | 
14 |     var b =  .2
   |             ~ 
   | 
help: if you expect a hexadecimal fraction, could use hexadecimal prefix:
   | 
14 |     var b = 0x.2
   |             ~~ 
   | 

2 errors generated, 2 errors printed.
